[build-system]
requires = ['setuptools>=61.0']
build-backend = "setuptools.build_meta"

[project]
name = "example_package_mlt"
version = "0.0.1"
authors = [
    { name="mlt-kr", email="113994436+mlt-kr@users.noreply.github.com" }
]
description = "A samll example package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independant"
]

[project.urls]
"Homepage" = "https://github.com/mlt-kr/python-package-template"
"Bug Tracker" = "https://github.com/mlt-kr/python-package-template/issues"