[build-system]
requires = ['setuptools>=61.0']
build-backend = "setuptools.build_meta"

[project]
name = ""
version = "0.0.1"
authors = [
    { name="mlt-kr", email="113994436+mlt-kr@users.noreply.github.com" }
]
description = ""
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independant"
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/mlt-kr/"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]
include = ["*"]
namespaces = false